--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
   ],
 
 
-  "repository": "https://github.com/RepthonArabic/RepthonAr",
+  "repository": "https://github.com/TOPTH0N/ALSiD",
 
 
   "website": "#TODO",
@@ -152,7 +152,7 @@
   "addons": [{
 
 
-    "plan": "scalingo-postgresql",
+    "plan": "heroku-postgresql",
 
 
     "options": {
